--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.9",
     "styled-components": "^5.3.10"
   }
 }
