--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emailjs/browser": "^3.11.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
-    "next": "13.3.1",
+    "next": "^13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
