--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
     "react-scroll": "^1.8.9",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "swr": "^2.1.5"
   }
 }
